WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
32164
REGRESSION: AX: buttons now extremely repetitive
https://bugs.webkit.org/show_bug.cgi?id=32164
Summary
REGRESSION: AX: buttons now extremely repetitive
chris fleizach
Reported
2009-12-04 10:15:13 PST
With VoiceOver • go to google.com • vo to a button result: text repeated..."google search, google search button"
Attachments
patch
(13.92 KB, patch)
2009-12-04 10:21 PST
,
chris fleizach
darin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
chris fleizach
Comment 1
2009-12-04 10:15:18 PST
AXValue is now being reported for AXButtons, which it should not. AXValue shouldn't even be an attribute on AXButton 12/4/09 9:27 AM Chris Fleizach: this was a regression from this change made for GTK
http://trac.webkit.org/changeset/46080

chris fleizach
Comment 2
2009-12-04 10:17:17 PST
Eventually we need to re-organize the methods returning text data on elements in accessibility (i have a bug for that)... but the immediate fix is that AXButtons on the Mac, should never have AXValue being returned..
chris fleizach
Comment 3
2009-12-04 10:21:39 PST
Created
attachment 44322
[details]
patch
WebKit Review Bot
Comment 4
2009-12-04 10:24:24 PST
Attachment 44322
[details]
did not pass style-queue: Failed to run "WebKitTools/Scripts/check-webkit-style" exit_code: 1 WebKitTools/DumpRenderTree/AccessibilityUIElement.cpp:225: Use 0 instead of NULL. [readability/null] [5] Total errors found: 1
chris fleizach
Comment 5
2009-12-04 10:25:25 PST
stylebot... i will make that change... please consider patch updated
chris fleizach
Comment 6
2009-12-04 12:05:06 PST
http://trac.webkit.org/changeset/51706
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug