REGRESSION: AX: buttons now extremely repetitive https://bugs.webkit.org/show_bug.cgi?id=32164

Reviewed by Darin Adler.

WebCore:

Test: platform/mac/accessibility/button-shouldnot-have-axvalue.html

* accessibility/AccessibilityObject.h:
(WebCore::AccessibilityObject::isButton):
* accessibility/mac/AccessibilityObjectWrapper.mm:
(-[AccessibilityObjectWrapper accessibilityAttributeNames]):

WebKitTools:

* DumpRenderTree/AccessibilityUIElement.cpp:
(isAttributeSupportedCallback):
(AccessibilityUIElement::getJSClass):
* DumpRenderTree/AccessibilityUIElement.h:
* DumpRenderTree/gtk/AccessibilityUIElementGtk.cpp:
(AccessibilityUIElement::isAttributeSupported):
* DumpRenderTree/mac/AccessibilityUIElementMac.mm:
(AccessibilityUIElement::isAttributeSupported):
* DumpRenderTree/win/AccessibilityUIElementWin.cpp:
(AccessibilityUIElement::isAttributeSupported):

LayoutTests:

* platform/mac-leopard/accessibility/table-with-aria-role-expected.txt:
* platform/mac/accessibility/button-shouldnot-have-axvalue-expected.txt: Added.
* platform/mac/accessibility/button-shouldnot-have-axvalue.html: Added.
* platform/mac/accessibility/table-with-aria-role-expected.txt:



Canonical link: https://commits.webkit.org/43133@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@51706 268f45cc-cd09-0410-ab3c-d52691b4dbfc