WebCore/accessibility/AccessibilityObject.h
@@ -286,6 +286,7 @@ public:
     bool isTree() const { return roleValue() == TreeRole; }
     bool isTreeItem() const { return roleValue() == TreeItemRole; }
     bool isScrollbar() const { return roleValue() == ScrollBarRole; }
+    bool isButton() const { return roleValue() == ButtonRole; }
     
     virtual bool isChecked() const { return false; }
     virtual bool isEnabled() const { return false; }
